# autogen_pdf

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/app/: __init__.py  main.py
src/app/core/: config.py  server.py
src/app/core/routes/: __init__.py
src/app/internal/: utils.py
src/app/internal/routes/: report.py  uploading.py
src/app/schemas/: settings.py
