[tool.poetry]
name = "autogen-pdf"
version = "0.1.0"
description = ""
authors = ["Oskalovlev <111913579+Oskalovlev@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" },]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
psycopg2-binary = "^2.9.9"
reportlab = "^4.0.6"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
taskipy = "^1.12.0"
requests = "^2.31.0"
vk-api = "^11.9.9"
pdfkit = "^1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "6.1.0"
pep8-naming = "0.13.3"
flake8-return = "1.2.0"
pytest = "^7.4.3"

[tool.taskipy.tasks]
app = "uvicorn src.app:create_app --reload"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
